# errbot-github

./: README.md  github.plug  github.py  githubzulip.plug  githubzulip.py  pyproject.toml  requirements.txt  test_markdown.py
github-zulip/: githubzulip.py
k8s/: k8s.plug  k8s.py
kubernetes/: kubernetes.plug  kubernetes.py
lib/: issue.yml
renderers/: __init__.py  issue.py  issue.yml  issue_comment.py  markdown.py
tests/: test_github.py  test_issue.py  test_issue_comment.py  test_markdown.py
tests/data/: issue.assigned.json  issue.assigned2.json  issue.closed.json  issue.closed2.json  issue.deleted.json  issue.demilestoned.json  issue.edited.json  issue.labeled.json  issue.labeled2.json  issue.milestoned.json  issue.opened.json  issue.reopened.json  issue.unassigned.json  issue.unassigned2.json  issue.unlabeled.json  issue.unlabeled2.json  issue_comment.created.json  issue_comment.deleted.json  issue_comment.edited.json
