[tool.poetry]
name = "errbot-github"
version = "1.0.0"
description = ""
authors = ["cern-sis-ts"]
readme = "README.md"
packages = [{include = "errbot_github"}]

[tool.poetry.dependencies]
python = "^3.10"
errbot = "^6.1.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
